# Otus-C-

./: CMakeLists.txt  lib.cpp  main.cpp  test_version.cpp
.github/workflows/: github-actions-demo.yml
